# phyloX

./: AGENTS.md  README.md  pyproject.toml
benchmarks/: scale_benchmark.py
docs/planning/: HANDOFF_TEMPLATE.md  OWNERSHIP.md  README.md  ROADMAP.md  TASK_BOARD.md
docs/planning/handoffs/: 2026-02-10-codex-bootstrap.md  2026-02-10-codex-final-milestones.md  2026-02-10-codex-full-pass.md
src/phylox/: __init__.py  benchmark.py  cli.py  data.py  distance.py  gpu.py  metrics.py  optimize.py  ou_likelihood.py  pipeline.py  preprocess.py  robust.py  search.py  simulate.py  tree.py
tests/: test_benchmark.py  test_data_and_preprocess.py  test_distance_and_nj.py  test_optimize_and_search.py  test_ou_likelihood.py  test_ou_rates_gamma.py  test_pipeline_and_metrics.py  test_robust_and_gpu.py
